<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homePage"
        android:title="Home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/settingsPage"
        android:title="Settings"
        android:icon="@drawable/ic_baseline_settings_24" />
    <item
        android:id="@+id/leaderboardPage"
        android:title="Leaderboard"
        android:icon="@drawable/ic_baseline_star_24"/>
</menu>