...
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:layout_marginBottom="80sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:gravity="center_horizontal"
                android:text="1Step Leaderboard"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
